2004-03-12  Alexey Shchepin  <alexey@sevcom.net>

	* src/configure.ac: Updated
	* src/Makefile.in: Likewise

2004-03-10  Alexey Shchepin  <alexey@sevcom.net>

	* src/web/ejabberd_http.erl: Removed debugging output

	* src/ejabberd_c2s.erl: Fixed processing of get_presence request
	(thanks to Mickael Remond)

2004-03-08  Alexey Shchepin  <alexey@sevcom.net>

	* src/msgs/ru.msg: Updated (thanks to Sergei Golovan)

	* src/mod_muc/mod_muc_room.erl: Now private conferences are
	visible to admins and owners of this conference (thanks to Sergei
	Golovan)

	* src/mod_muc/mod_muc.erl: More xml:lang support (thanks to Sergei
	Golovan)

	* src/mod_vcard.erl: Better processing of EMAIL tag (thanks to
	Sergei Golovan)

	* src/ejabberd_s2s_out.erl: Added "catch" to "open_socket" (thanks
	to Sergei Golovan)

2004-03-07  Alexey Shchepin  <alexey@sevcom.net>

	* src/web/ejabberd_http_poll.erl: Completed

2004-03-06  Alexey Shchepin  <alexey@sevcom.net>

	* src/web/: Support for HTTP Polling (JEP-0025) (almost complete)

2004-03-04  Alexey Shchepin  <alexey@sevcom.net>

	* src/web/: Updated

2004-03-03  Alexey Shchepin  <alexey@sevcom.net>

	* src/web/: Minor update

2004-03-02  Alexey Shchepin  <alexey@sevcom.net>

	* src/web/: Small HTTP server and admin web-interface to ejabberd
	(not completed yet)
	* src/ejabberd_sup.erl: Added HTTP processes supervisor

	* src/ejabberd_c2s.erl: Added API to ask presence (thanks to
	Mickael Remond)

	* src/msgs/ru.msg: Updated (thanks to Sergei Golovan)

	* src/mod_muc/mod_muc_room.erl: Updated date parser (thanks to
	Sergei Golovan)

	* src/mod_muc/mod_muc.erl: Added error descriptions (thanks to
	Sergei Golovan)
	* src/mod_muc/mod_muc_room.erl: Likewise

	* src/mod_vcard.erl: Fixed vCard tag (thanks to Sergei Golovan)
	* src/mod_irc/mod_irc.erl: Likewise
	* src/mod_pubsub/mod_pubsub.erl: Likewise

	* src/jlib.hrl: Added macros for errors with <text/> (thanks to
	Sergei Golovan)

2004-02-26  Alexey Shchepin  <alexey@sevcom.net>
